--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
                     <artifactId>tomcat-embed-jasper</artifactId>
                     <scope>provided</scope>
                 </dependency>
+                <dependency>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-devtools</artifactId>
+                    <version>2.4.5</version>
+                </dependency>
+
 	</dependencies>
 
 	<build>
